@@ -93,12 +93,11 @@ my %obsolete_macros =
      'fp_WITH_REGEX'		=> "use `AM_WITH_REGEX'",
      'gm_PROG_LIBTOOL'		=> "use `AM_PROG_LIBTOOL'",
      'jm_MAINTAINER_MODE'	=> "use `AM_MAINTAINER_MODE'",
-     'md_TYPE_PTRDIFF_T'	=> "use `AM_TYPE_PTRDIFF_T'",
+     'md_TYPE_PTRDIFF_T'	=> "add `ptrdiff_t' to `AC_CHECK_TYPES(...)'",
      'ud_PATH_LISPDIR'		=> "use `AM_PATH_LISPDIR'",
      'ud_GNU_GETTEXT'		=> "use `AM_GNU_GETTEXT'",
 
      # Now part of autoconf proper, under a different name.
-     'AM_FUNC_FNMATCH'		=> "use `AC_FUNC_FNMATCH'",
      'fp_FUNC_FNMATCH'		=> "use `AC_FUNC_FNMATCH'",
      'AM_SANITY_CHECK_CC'	=> "automatically done by `AC_PROG_CC'",
      'AM_PROG_INSTALL'		=> "use `AC_PROG_INSTALL'",
@@ -106,9 +105,6 @@ my %obsolete_macros =
      'AM_CYGWIN32'		=> "use `AC_CYGWIN'",
      'AM_MINGW32'		=> "use `AC_MINGW32'",
      'AM_FUNC_MKTIME'		=> "use `AC_FUNC_MKTIME'",
-
-# These aren't quite obsolete.
-#      'md_PATH_PROG',
      );
 
 # Regexp to match the above macros.
