@@ -284,12 +284,11 @@ my %obsolete_macros =
      'fp_WITH_REGEX'		=> "use `AM_WITH_REGEX'",
      'gm_PROG_LIBTOOL'		=> "use `AM_PROG_LIBTOOL'",
      'jm_MAINTAINER_MODE'	=> "use `AM_MAINTAINER_MODE'",
-     'md_TYPE_PTRDIFF_T'	=> "use `AM_TYPE_PTRDIFF_T'",
+     'md_TYPE_PTRDIFF_T'	=> "add `ptrdiff_t' to `AC_CHECK_TYPES(...)'",
      'ud_PATH_LISPDIR'		=> "use `AM_PATH_LISPDIR'",
      'ud_GNU_GETTEXT'		=> "use `AM_GNU_GETTEXT'",
 
      # Now part of autoconf proper, under a different name.
-     'AM_FUNC_FNMATCH'		=> "use `AC_FUNC_FNMATCH'",
      'fp_FUNC_FNMATCH'		=> "use `AC_FUNC_FNMATCH'",
      'AM_SANITY_CHECK_CC'	=> "automatically done by `AC_PROG_CC'",
      'AM_PROG_INSTALL'		=> "use `AC_PROG_INSTALL'",
@@ -297,9 +296,6 @@ my %obsolete_macros =
      'AM_CYGWIN32'		=> "use `AC_CYGWIN'",
      'AM_MINGW32'		=> "use `AC_MINGW32'",
      'AM_FUNC_MKTIME'		=> "use `AC_FUNC_MKTIME'",
-
-# These aren't quite obsolete.
-#      'md_PATH_PROG',
      );
 
 # Regexp to match the above macros.
@@ -4555,7 +4551,7 @@ sub scan_one_autoconf_file
 	    $libsources{'getopt.c'} = 1;
 	    $libsources{'getopt1.c'} = 1;
 	}
-	elsif (/AM_FUNC_STRTOD/)
+	elsif (/A[CM]_FUNC_STRTOD/)
 	{
 	    $libsources{'strtod.c'} = 1;
 	}
@@ -4570,12 +4566,12 @@ sub scan_one_autoconf_file
 	{
 	    $libsources{'mktime.c'} = 1;
 	}
-	elsif (/AM_FUNC_ERROR_AT_LINE/)
+	elsif (/A[CM]_FUNC_ERROR_AT_LINE/)
 	{
 	    $libsources{'error.c'} = 1;
 	    $libsources{'error.h'} = 1;
 	}
-	elsif (/AM_FUNC_OBSTACK/)
+	elsif (/A[CM]_FUNC_OBSTACK/)
 	{
 	    $libsources{'obstack.c'} = 1;
 	    $libsources{'obstack.h'} = 1;
