@@ -20,7 +20,8 @@
 @ifinfo
 This file documents GNU automake @value{VERSION}
 
-Copyright 1995, 1996, 1997, 1998, 1999, 2000 Free Software Foundation, Inc.
+Copyright 1995, 1996, 1997, 1998, 1999, 2000, 2001
+Free Software Foundation, Inc.
 
 Permission is granted to make and distribute verbatim copies of
 this manual provided the copyright notice and this permission notice
@@ -1128,15 +1129,17 @@ Autoconf Manual}.
 @vindex build_alias
 @vindex target_alias
 
-@item AC_FUNC_ALLOCA
+@item  AC_FUNC_ALLOCA
+@itemx AC_FUNC_ERROR_AT_LINE
+@itemx AC_FUNC_FNMATCH
 @itemx AC_FUNC_GETLOADAVG
 @itemx AC_FUNC_MEMCMP
-@itemx AC_STRUCT_ST_BLOCKS
-@itemx AC_FUNC_FNMATCH
 @itemx AC_FUNC_MKTIME
-@itemx AM_FUNC_STRTOD
+@itemx AC_FUNC_OBSTACK
+@itemx AC_FUNC_STRTOD
 @itemx AC_REPLACE_FUNCS
 @itemx AC_REPLACE_GNU_GETOPT
+@itemx AC_STRUCT_ST_BLOCKS
 @itemx AM_WITH_REGEX
 Automake will ensure that the appropriate dependencies are generated for
 the objects corresponding to these macros.  Also, Automake will verify
@@ -1146,16 +1149,17 @@ these macros, so @code{automake -a} will not install the sources.
 @xref{A Library}, for more information.  Also, see @ref{Particular
 Functions, , Particular Function Checks, autoconf, The Autoconf Manual}.
 @cvindex AC_FUNC_ALLOCA
+@cvindex AC_FUNC_ERROR_AT_LINE
+@cvindex AC_FUNC_FNMATCH
 @cvindex AC_FUNC_GETLOADAVG
 @cvindex AC_FUNC_MEMCMP
-@cvindex AC_STRUCT_ST_BLOCKS
-@cvindex AC_FUNC_FNMATCH
-@cvindex AC_FUNC_FNMATCH
+@cvindex AC_FUNC_MKTIME
+@cvindex AC_FUNC_OBSTACK
+@cvindex AC_FUNC_STRTOD
 @cvindex AC_REPLACE_FUNCS
 @cvindex AC_REPLACE_GNU_GETOPT
-@cvindex AM_FUNC_STRTOD
+@cvindex AC_STRUCT_ST_BLOCKS
 @cvindex AM_WITH_REGEX
-@cvindex AC_FUNC_MKTIME
 
 @item LIBOBJS
 Automake will detect statements which put @file{.o} files into
@@ -1353,22 +1357,6 @@ These macros are used to implement automake's automatic dependency
 tracking scheme.  They are called automatically by automake when
 required, and there should be no need to invoke them manually.
 
-@item AM_FUNC_STRTOD
-If the @code{strtod} function is not available, or does not work
-correctly (like the one on SunOS 5.4), add @file{strtod.o} to output
-variable @code{LIBOBJS}.
-@cvindex AM_FUNC_STRTOD
-
-@item AM_FUNC_ERROR_AT_LINE
-If the function @code{error_at_line} is not found, then add
-@file{error.o} to @code{LIBOBJS}.
-@cvindex AM_FUNC_ERROR_AT_LINE
-
-@item AM_FUNC_OBSTACK
-Check for the GNU obstacks code; if not found, add @file{obstack.o} to
-@samp{LIBOBJS}.
-@cvindex AM_FUNC_OBSTACK
-
 @item AM_C_PROTOTYPES
 Check to see if function prototypes are understood by the compiler.  If
 so, define @samp{PROTOTYPES} and set the output variables @samp{U} and
@@ -1462,12 +1450,6 @@ from @code{AM_INIT_AUTOMAKE}.
 Check to see if POSIX termios headers and functions are available on the
 system.  If so, set the shell variable @code{am_cv_sys_posix_termios} to
 @samp{yes}.  If not, set the variable to @samp{no}.
-
-@item AM_TYPE_PTRDIFF_T
-@cvindex HAVE_PTRDIFF_T
-@vindex ptrdiff_t
-Define @samp{HAVE_PTRDIFF_T} if the type @samp{ptrdiff_t} is defined in
-@file{<stddef.h>}.
 
 @item AM_WITH_DMALLOC
 @cvindex WITH_DMALLOC
