@@ -1,4 +1,4 @@
-@set UPDATED 27 September 2001
-@set UPDATED-MONTH September 2001
+@set UPDATED 20 October 2001
+@set UPDATED-MONTH October 2001
 @set EDITION 1.5a
 @set VERSION 1.5a
