@@ -2,6 +2,11 @@ New in 1.5a:
 * Autoconf 2.52 is required.
 * `dist' generates all the archive flavors, as did `dist-all'.
 * `dist-gzip' generates the Gzip tar file only.
+* Combining Automake Makefile conditionals no longer lead to a combinatorial
+  explosion.  Makefile.in's keep a reasonable size.
+* AM_FUNC_ERROR_AT_LINE, AM_FUNC_STRTOD, AM_FUNC_OBSTACK, AM_PTRDIFF_T
+  are no longer shipped, since Autoconf 2.52 provides them (both as AM_
+  and AC_).
 
 New in 1.5:
 * Support for `configure.ac'.
