@@ -1,3 +1,9 @@
+2001-10-20  Akim Demaille  <akim@epita.fr>
+
+	* m4/error.m4, m4/obstack.m4, m4/ptrdiff.m4, m4/strtod.m4:
+	Remove, since Autoconf 2.52 has them.
+	* automake.in, aclocal.in, automake.texi: Adjust.
+
 2001-10-19  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&read_main_am_file): s/generated automatically/
